tests/valid/basic_tokens.snl
program p
type t = integer;
var t v1;
    char v2;
begin
    { comments are skipped }
    read(v1);
    v1:=v1+10;
    v2:='a';
    write(v1)
end.
