tests/semantic_errors/assignment_mismatch.snl
program assignmentMismatch
var integer x;
    char c;
begin
    x := c
end.
